# rsbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  config.example.toml
.github/workflows/: master_dlist-rsbot.yml
src/: config.rs  events.rs  interval.rs  main.rs  utils.rs  web.rs
src/bot/: events.rs  interval.rs  mod.rs
