[package]
name = "bot"
version = "0.1.0"
authors = ["Jakub <jakub@cubepotato.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125" }
toml = "0.5"
envy = "0.4"
tokio = { version = "1.5.0", features = ["full", "rt-multi-thread"] }
chrono = "0.4.19"
chrono-tz = "0.5"

[dependencies.serenity]
default-features = false
features = ["client", "cache", "http", "gateway", "rustls_backend", "model"]
version = "0.10"
